# moveit2_tutorial

cobolege_description/: CMakeLists.txt  cobolege_torche.urdf  package.xml
cobolege_description/config/: control.yaml
cobolege_description/launch/: control.launch  display_robot.launch  load_robot_description.launch  robot_launch.launch
cobolege_description/urdf/: cobolege.xacro  cobolege_standalone.xacro  cobolege_torche.urdf  cobolege_torche.xacro  config.yaml  urdf.rviz
cobolege_moveit_cfg/: .setup_assistant  CMakeLists.txt  package.xml
cobolege_moveit_cfg/config/: chomp_planning.yaml  cobolege.ros2_control.xacro  cobolege.srdf.xacro  cobolege.urdf.xacro  cobolege_arm.xacro  cobolege_v0.srdf  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
cobolege_moveit_cfg/launch/: demo.launch.py  moveit.rviz
cobolege_moveit_cpp/: CMakeLists.txt  package.xml
cobolege_moveit_cpp/launch/: tutorial.launch.py
cobolege_moveit_cpp/src/: move_group_interface_tutorial.cpp
