<?xml version="1.0"?>
<package format="3">
  <name>cobolege_description</name>
  <version>1.0.0</version>
  <description>Cobolege URDF package</description>

  <author email="ldl@irtjv.fr">LDelval</author>

  <maintainer email="ldl@irtjv.fr">LDelval</maintainer>

  <license>Apache2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>