<?xml version="1.0"?>
<package format="2">
  <name>cobolege_description</name>
  <version>1.0.0</version>
  <description>This package contains the description of cobolege kinematics</description>

  <maintainer email="benyamine.allouche@irt-jules-verne.fr"> Benyamine ALLOUCHE</maintainer>
  <maintainer email="ldelval@irt-jules-verne.fr"> Ludovic Delval</maintainer>

  <license>Apache2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  
  



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
