<?xml version="1.0"?>
<package format="3">
  <name>cobolege_moveit_config</name>
  <version>1.0.0</version>
  <description>Config pour moveit2</description>
  <author email="ldl@irtjv.fr">LDelval</author>
  <maintainer email="ldl@irtjv.fr">LDelval</maintainer>

  <license>Apache2.0</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>cobolege_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>